i literally refactored the entire mod, how am i supposed to summarize that. suffice it to say it works a lot better