@@ -1,8 +1,6 @@
 package com.glisco.isometricrenders.mixin;
 
-import com.glisco.isometricrenders.render.IsometricRenderHelper;
-import com.glisco.isometricrenders.screen.BatchIsometricBlockRenderScreen;
-import com.glisco.isometricrenders.screen.BatchIsometricItemRenderScreen;
+import com.glisco.isometricrenders.screen.SelectRenderTaskScreen;
 import net.minecraft.client.gui.screen.Screen;
 import net.minecraft.client.gui.screen.ingame.HandledScreen;
 import net.minecraft.screen.ScreenHandler;
@@ -15,8 +13,6 @@ import org.spongepowered.asm.mixin.Shadow;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
-
-import java.util.stream.Collectors;
 
 @Mixin(HandledScreen.class)
 public class HandledScreenMixin<T extends ScreenHandler> extends Screen {
@@ -31,18 +27,10 @@ public class HandledScreenMixin<T extends ScreenHandler> extends Screen {
 
     @Inject(method = "keyPressed", at = @At("HEAD"), cancellable = true)
     public void renderInventory(int keyCode, int scanCode, int modifiers, CallbackInfoReturnable<Boolean> cir) {
-        if (keyCode != GLFW.GLFW_KEY_F12) return;
+        if (keyCode != GLFW.GLFW_KEY_F12 || !Screen.hasControlDown()) return;
 
-        if (Screen.hasControlDown()) {
-            client.setScreen(new BatchIsometricBlockRenderScreen(IsometricRenderHelper.extractBlocks(handler.slots.stream().map(Slot::getStack).collect(Collectors.toList())), "inventory"));
-            cir.setReturnValue(false);
-        } else if (Screen.hasAltDown()) {
-            client.setScreen(new BatchIsometricItemRenderScreen(handler.slots.stream().map(Slot::getStack).iterator(), "inventory"));
-            cir.setReturnValue(false);
-        } else if (Screen.hasShiftDown()) {
-            IsometricRenderHelper.renderItemAtlas("inventory", handler.slots.stream().map(Slot::getStack).filter(itemStack -> !itemStack.isEmpty()).collect(Collectors.toList()), true);
-            cir.setReturnValue(false);
-        }
+        client.setScreen(new SelectRenderTaskScreen(handler.slots.stream().map(Slot::getStack).filter(stack -> !stack.isEmpty()).toList()));
+        cir.setReturnValue(false);
     }
 
 }
